# SeetaFaceEngine

./: .gitignore  CMakeLists.txt  README.md  test_seeta_face_engine.py
FaceAlignment/: CMakeLists.txt
FaceAlignment/include/: common.h  face_alignment.h
FaceAlignment/python/: face_alignment.py  pyFaceAlignment.cpp  test_face_alignment.py
FaceDetection/: CMakeLists.txt
FaceDetection/python/: face_detection.py  pyFaceDetection.cpp  test_face_detection.py
FaceIdentification/: CMakeLists.txt
FaceIdentification/include/: face_identification.h
FaceIdentification/python/: face_identification.py  pyFaceIdentification.cpp  test_face_identification.py
FaceIdentification/src/test/: CMakeLists.txt
FaceIdentification/tools/: face_identification.cpp
